fix scrolling endpoints to be equidistant on both ends make sure resizing the window clamps scrolling properly add the option to open the last project and show row numbers in hex add 0 and P for D#2 and E2 change letter spacing again

--- a/src/ui/elements/patterneditor/main.less
+++ b/src/ui/elements/patterneditor/main.less
@@ -104,13 +104,13 @@
 							}
 
 							&.idk {
-								padding-left: 2px;
+								padding-left: 1px;
 								width: @charsize * 2;
 								color: #62ab4a;
 							}
 
 							&.volume {
-								padding-left: 2px;
+								padding-left: 1px;
 								width: @charsize * 2;
 								color: #7e81a5;
 							}
@@ -122,7 +122,7 @@
 							}
 
 							&.value {
-								padding-left: -1px;
+								margin-left: -1px;
 								width: @charsize * 2;
 								color: #bba6a1;
 							}
